CHANGES TO REMIND

* Version 3.0 Patch 19

+ MAJOR ENHANCEMENTS

- Added MOON and SHADE specials.  These now work with PostScript and
  the Tcl/Tk front-end

- TkRemind overhauled -- you can now edit and delete reminders from
  the GUI.  You can actually reasonably use Remind without learning
  the scripting language.

+ MINOR ENHANCEMENTS

- Updated romanian.h, courtesy Liviu Daia.

+ BUG FIXES

- Removed restriction against reading group-writable files.  This
  caused headaches on Red Hat Linux which uses an unusual user/group
  scheme.

- Remind would not compile if a non-English language was selected.

- Fixed free() of a NULL pointer.

- Made tkremind display a helpful error message if Remind's
  "security feature" of not reading a group-writable file kicks
  in.

* Version 3.0 Patch 18

+ MAJOR ENHANCEMENTS

- Added the script "build.tk" which makes it trivial to compile
  and install Remind under UNIX -- no need to edit Makefiles or
  header files.  A nice GUI installation dialog!

- Got rid of all fixed-size buffers.  Hurray!  Everything is dynamic --
  no built-in limits on line length, token size, etc.  This should
  cure lots of SEGV's for weird files.

- Added TAG and DURATION clauses for communicating more information to
  back-ends and eventually converting REMIND into a full-fledged
  scheduler.

- Completely reworked the PS/PSFILE mechanism to use the more
  general SPECIAL mechanism for customizing output in REMIND back-ends.

+ MINOR ENHANCEMENTS

- Made parser _very_ forgiving -- the type of reminder now defaults
  to MSG.  This lets you have lines in the reminder file like this:

	Feb 9, 1998 Meeting with Joe.

  But I don't recommend abusing it.  It's mostly to ease migration from
  UNIX calendar(1) files.

- Documented the "remind -p" format.

- Made Remind communicate day and month names to back-ends so they
  can automatically take on the language Remind was compiled with.
