@@ -9,5 +9,6 @@
 /*                                                             */
 /***************************************************************/
 
-/* $Id: version.h,v 1.3 1998-03-01 20:43:58 dfs Exp $ */
+/* $Id: version.h,v 1.4 1998-05-05 03:16:27 dfs Exp $ */
 #define VERSION "03.00.19"
+#define BETA 1
